--- a/config/locales/application.ja.yml
+++ b/config/locales/application.ja.yml
@@ -1,30 +1,58 @@
 ja:
+  app:
+    # page_title_helper に利用される
+    # 各ページの title 要素に設定される
+    name: Rails素振り
+
+  # オリジナル。汎用的に view で利用するもの。
+  # see views/application/*
+  view:
+    show: 詳細
+    edit: 編集
+    destroy: 削除
+    destroy_confirm: "削除してもよろしいですか?"
+    display_nothing: 表示するものがありません
+
+  # formtastic で利用されるもの
   formtastic:
     titles:
       items_details: アイテム管理
-    # ↓これはフォームのラベル表示用で、 ar のものを上書きできる
+    # フォームのラベル表示用で、 ar のものを上書きできる
     labels:
       title: たいとる
       item:
         name: 表示名
+    # フォームのヒント表示用
     hints:
       item:
         name: ヒント日本語OK
         kind: いまのところ 1〜3 のみ
+    # フォームの placeholder 表示用。formtastic 2.2.0 必要
     placeholders:
       item:
         name: "@holysugar"
         description: メモ
         price: 12345
+    # フォームのボタン/リンクの文言
     actions:
       create: "%{model}の作成"
       update: 変更の適用
       reset: リセット
       cancel: キャンセルして戻る
 
+  # すべての activemodel, activerecord で共通にできる属性名称
+  # ActiveModel.human_attribute_names で利用される
+  attributes:
+    id: ID
+    created_at: 作成日時
+    updated_at: 更新日時
+
+  # ActiveRecord::Base.human_attribute_names で利用される
   activerecord:
+    # model の名前
     models:
       item: アイテム
+    # 各モデルの属性の名前
     attributes:
       item:
         name: 名前
@@ -33,6 +61,11 @@ ja:
         kind: 種別
         enabled: 有効フラグ
 
+  # TranslationHelper#translate で利用される
   items:
+    # ItemsController 共通の title
     title: アイテム管理
+    new:
+      # ItemsController#new のみの title
+      title: アイテム管理（新規作成）
 
